tests/expected_failures/missing_value.stderr
error: Keyword `prefix` requires a value
 --> $DIR/missing_value.rs:5:10
  |
5 | #[gflags(prefix)]
  |          ^^^^^^
